--- a/template1.html
+++ b/template1.html
@@ -4,9 +4,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
  	<meta name="format-detection" content="telephone=no"/>
 
-	<!-- Responsive Mobile-First Email Template by Konstantin Savchenko, 2015.
-	https://github.com/konsav/email-templates/  -->
-
+	
 	<style>
 /* Reset styles */ 
 body { margin: 0; padding: 0; min-width: 100%; width: 100% !important; height: 100% !important;}
@@ -66,9 +64,9 @@ a, a:hover {
 			<!-- Image text color should be opposite to background color. Set your url, image src, alt and title. Alt text should fit the image size. Real image size should be x2. URL format: http://domain.com/?utm_source={{Campaign-Source}}&utm_medium=email&utm_content=logo&utm_campaign={{Campaign-Name}} -->
 			<a target="_blank" style="text-decoration: none;"
 			img
-				href="https://customerpay.me/"><img border="0" vspace="0" hspace="0"
+				href="https://customerpay.me/"><img 
 				src="/img/fulllogo.png"
-				width="" height="45"
+				width="" height="48"
 				alt="Logo" title="Logo" style="
 				color: #000000;
 				font-size: 10px; margin: 0; padding: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;" /></a>
@@ -85,10 +83,6 @@ a, a:hover {
 	bgcolor="#FFFFFF"
 	width="560" style="border-collapse: collapse; border-spacing: 0; padding: 0; width: inherit;
 	max-width: 560px;" class="container">
-
-	<!-- HEADER -->
-	<!-- Set text color and font family ("sans-serif" or "Georgia, serif") -->
-	
 	
 	<!-- PARAGRAPH -->
 	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
@@ -98,7 +92,7 @@ a, a:hover {
 			padding-top: 25px; 
 			color: #000000;
 			font-family: sans-serif;" class="paragraph">
-                   <p> Hi Isaac</p>
+                   <p> Hi {{ name }}</p>
                 <p>You've been invited to {{ store_name}} in CustomerPayMe.</p>
                 <p>CustomerPayMe is an online platform to manage company debts and remind debtors about payments</p>
                 <p>Please click the button to accept the invite</p>
@@ -135,14 +129,8 @@ a, a:hover {
 	<!-- LIST -->
 	<tr>
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%;" class="list-item"><table align="center" border="0" cellspacing="0" cellpadding="0" style="width: inherit; margin: 0; padding: 0; border-collapse: collapse; border-spacing: 0;">
-			
-			
-
 		</table></td>
 	</tr>
-
-	
-
 	<!-- PARAGRAPH -->
 	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
 	<tr>
@@ -164,17 +152,7 @@ a, a:hover {
 	width="560" style="border-collapse: collapse; border-spacing: 0; padding: 0; width: inherit;
 	max-width: 560px;" class="wrapper">
 
-	<!-- SOCIAL NETWORKS -->
-	<!-- Image text color should be opposite to background color. Set your url, image src, alt and title. Alt text should fit the image size. Real image size should be x2 -->
-	<tr>
-		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%;
-			padding-top: 25px;" class="social-icons"><table
-			width="256" border="0" cellpadding="0" cellspacing="0" align="center" style="border-collapse: collapse; border-spacing: 0; padding: 0;">
-			
-			</table>
-		</td>
-	</tr>
-
+	
 	<!-- FOOTER -->
 	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
 	<tr>
@@ -183,14 +161,8 @@ a, a:hover {
 			padding-bottom: 20px;
 			color: #999999;
 			font-family: sans-serif;" class="footer">
-
-				This email template was sent to&nbsp;you becouse we&nbsp;want to&nbsp;make the&nbsp;world a&nbsp;better place. You&nbsp;could change your <a href="https://github.com/konsav/email-templates/" target="_blank" style="text-decoration: underline; color: #999999; font-family: sans-serif; font-size: 13px; font-weight: 400; line-height: 150%;">subscription settings</a> anytime.
-
-				<!-- ANALYTICS -->
-				<!-- https://www.google-analytics.com/collect?v=1&tid={{UA-Tracking-ID}}&cid={{Client-ID}}&t=event&ec=email&ea=open&cs={{Campaign-Source}}&cm=email&cn={{Campaign-Name}} -->
-				<img width="1" height="1" border="0" vspace="0" hspace="0" style="margin: 0; padding: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;"
-				src="https://raw.githubusercontent.com/konsav/email-templates/master/images/tracker.png" />
-
+				Please, do not reply to this email.
+				Thanks for using CustomerPayMe. Best regards from CustomerPayMe Team
 		</td>
 	</tr>
 
