--- a/debt-template.html
+++ b/debt-template.html
@@ -18,7 +18,7 @@ img { border: 0; line-height: 100%; outline: none; text-decoration: none; -ms-in
 
 /* Rounded corners for advanced mail clients only */ 
 @media all and (min-width: 560px) {
-	.container { border-radius: 8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; -khtml-border-radius: 8px;}
+	.container { border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 8px; -khtml-border-radius: 8px;}
 	
 }
 
@@ -75,11 +75,23 @@ a, a:hover {
 <table border="0" cellpadding="0" cellspacing="0" align="center"
 	width="60" style="border-collapse: collapse; border-spacing: 0; padding: 0; width: inherit;
 	max-width: 560px;" class="wrapper">
+<!-- End of WRAPPER -->
+</table>
 
+
+<!-- WRAPPER / CONTEINER -->
+<!-- Set conteiner background color -->
+<table border="0" cellpadding="0" cellspacing="0" align="center"
+	bgcolor="#FFFFFF"
+	width="560" style="border-collapse: collapse; border-spacing: 0; padding: 0; width: inherit;
+	max-width: 760px;" class="container">
+	
+	<!-- PARAGRAPH -->
+	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
 	<tr>
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%;
 			padding-top: 20px;
-			padding-bottom: 20px;">
+			padding-bottom: 20px;" >
 
 			
 			<!-- LOGO -->
@@ -96,24 +108,24 @@ a, a:hover {
 		</td>
 	</tr>
 
-<!-- End of WRAPPER -->
-</table>
+	<tr>
+		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%;
+			padding-top: 20px;
+			padding-bottom: 20px;" >
 
-<!-- WRAPPER / CONTEINER -->
-<!-- Set conteiner background color -->
-<table border="0" cellpadding="0" cellspacing="0" align="center"
-	bgcolor="#FFFFFF"
-	width="560" style="border-collapse: collapse; border-spacing: 0; padding: 0; width: inherit;
-	max-width: 760px;" class="container">
-	
-	<!-- PARAGRAPH -->
-	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
-	
+			<h1>{{store_name}}</h1>
+			
+		</td>
+	</tr>
+
     <tr>
+		
+		
 		<td align="left" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%; font-size: 17px; font-weight: 400; line-height: 160%;
 			padding-top: 25px; 
 			color: #000000;
 			font-family: sans-serif;" class="paragraph">
+			
                    <p> Hi {{ name }}</p>
                 <p>You've been invited to {{ store_name}} in CustomerPayMe.</p>
                 <p>CustomerPayMe is an online platform to manage company debts and remind debtors about payments</p>
@@ -125,8 +137,8 @@ a, a:hover {
 	  </td> -->
 	 
   
-	<table class="table-invoice" style="max-width: 560px; border-radius: 20%;" >
-	  <tr class="tr-invoice">
+	<table class="table-invoice" style="max-width: 60px; border-radius: 20%;" >
+	  <tr class="tr-invoice" >
 		<th colspan="5" class="th-invoice">Invoice Details</th>
 	
 	  </tr>
@@ -137,7 +149,7 @@ a, a:hover {
 		  <p>24, December 2021</p>
 
 		  <p style="font-weight: bold;">Due date</p>
-		  <p>kjhjkhkkj</p>
+		  <p>24, December 2021  <span style="color: red; font-size: 14px;">(3 days overdue)</span></p>
 		</td>
 		<td colspan="2"  style="padding: 50 0px; ;" >
 			<p style="font-weight: bold;">Your Details</p>
@@ -179,7 +191,7 @@ a, a:hover {
 </tr>
 	<!-- BUTTON -->
 	<!-- Set button background color at TD, link/text color at A and TD, font family ("sans-serif" or "Georgia, serif") at TD. For verification codes add "letter-spacing: 5px;". Link format: http://domain.com/?utm_source={{Campaign-Source}}&utm_medium=email&utm_content={{Button-Name}}&utm_campaign={{Campaign-Name}} -->
-	<tr>
+	<tr style="display: flex;">
 		
 		<td align="left" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%;
 			padding-top: 25px;
@@ -196,11 +208,11 @@ a, a:hover {
 			</td></tr></table></a>
 		</td>
 		
-		<td align="left" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;  padding-right: 22.25%; width: 87.5%;
+		<td align="left" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;  padding-right: 8.25%; width: 100%;
 			padding-top: 25px;
 			padding-bottom: 5px;" class="button"><a
 			href="#" target="_blank" style="text-decoration: none;">
-				<table border="0" cellpadding="0" cellspacing="0" align="right" style="max-width: 540px; min-width: 220px; border-collapse: collapse; border-spacing: 0; padding: 0;"><tr><td align="center" valign="middle" style="padding: 12px 24px; margin: 0; text-decoration: none; border-collapse: collapse; border-spacing: 0; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -khtml-border-radius: 4px;"
+				<table border="0" cellpadding="0" cellspacing="0" align="right" style="max-width: 240px; min-width: 120px; border-collapse: collapse; border-spacing: 0; padding: 0;"><tr><td align="center" valign="middle" style="padding: 12px 24px; margin: 0; text-decoration: none; border-collapse: collapse; border-spacing: 0; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -khtml-border-radius: 4px;"
 					bgcolor="#00098A"><a target="_blank" style="text-decoration: none;
 					color: #FFFFFF; font-family: sans-serif; font-size: 17px; font-weight: 400; line-height: 120%;"
 					href="#">
